--- a/tasks/build.yml
+++ b/tasks/build.yml
@@ -21,16 +21,12 @@
     mode: "{{ item.mode | default('0644') }}"
   with_items: "{{ project_deploy_templates }}"
 
-- name: Check if project folders exist
-  stat:
-    path: "{{ deploy_helper.current_path }}/{{ item }}"
-  register: project_folder_paths
+- name: Copy project version folders
+  copy:
+    src: "{{ deploy_helper.current_path }}/{{ item }}"
+    dest: "{{ deploy_helper.new_release_path }}/{{ item }}"
   with_items: "{{ project_deploy_copy_folders }}"
-
-- name: Copy project folders
-  command: cp -rp {{ deploy_helper.current_path }}/{{ item.item }} {{ deploy_helper.new_release_path }}
-  with_items: "{{ project_folder_paths.results }}"
-  when: item.stat.exists
+  ignore_errors: yes
 
 - include: "{{ project_deploy_build_after }}"
   tags: deploy-build-after
