--- a/tasks/finalize.yml
+++ b/tasks/finalize.yml
@@ -7,6 +7,7 @@
   deploy_helper:
     path: "{{ project_deploy_root }}"
     release: "{{ deploy_helper.new_release }}"
+    keep_releases: "{{ project_deploy_keep_releases }}"
     state: finalize
 
 - include: "{{ project_deploy_finalize_after }}"
